--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "redux-diff-logger",
   "version": "0.0.9",
   "description": "Diff logger between states for redux",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "npm run lint",
     "clean": "$(npm bin)/rimraf lib",
