--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
   "rules": {
     "no-console": 0,
     "indent": [2, 2],
-    "quotes": [2, "single", {"avoidEscape": true, "allowTemplateLiterals": true}]
+    "quotes": [2, "single", {"avoidEscape": true, "allowTemplateLiterals": true}],
+    "prefer-template": 0
   },
   "plugins": [
     "react"
